--- a/html(ask)/Ask.scss
+++ b/html(ask)/Ask.scss
@@ -2,6 +2,10 @@
 @use "../style/header";
 // @use "../style/Basic.scss";
 
+a {
+  text-decoration: none;
+}
+
 // ? acordion
 
 .title {
@@ -19,6 +23,9 @@
 }
 .title__conteiner__text {
   text-decoration: none;
+  text-decoration: none;
+  color: #999;
+  font-size: 13px;
 }
 .title__conteiner__text__about {
 }
