--- a/style/_header.scss
+++ b/style/_header.scss
@@ -126,6 +126,7 @@
       border-radius: 19px;
       background-color: #555454;
       transition: 0.1s ease;
+      text-decoration: none;
 
       &:hover {
         background-color: #494848;
@@ -143,6 +144,7 @@
     }
     &__link {
       transition: 0.4s ease;
+      text-decoration: none;
 
       display: block;
       font-style: normal;
@@ -164,6 +166,8 @@
         color: #fff;
         transition: 0.1s ease;
         border-bottom: 2px solid rgb(226, 208, 208);
+      text-decoration: none;
+
       }
       @include _800() {
         margin: 10px 0;
