--- a/style/index/insex.css
+++ b/style/index/insex.css
@@ -119,6 +119,7 @@ img {
   border-radius: 19px;
   background-color: #555454;
   transition: 0.1s ease;
+  text-decoration: none;
 }
 .blok__register__link:hover {
   background-color: #494848;
@@ -135,6 +136,7 @@ img {
 }
 .blok__navigation__link {
   transition: 0.4s ease;
+  text-decoration: none;
   display: block;
   font-style: normal;
   font-weight: 400;
@@ -156,6 +158,7 @@ img {
   color: #fff;
   transition: 0.1s ease;
   border-bottom: 2px solid rgb(226, 208, 208);
+  text-decoration: none;
 }
 @media (max-width: 800px) {
   .blok__navigation__link {
